# inkbox-power-deamon

./: .clangd  .gitignore  CMakeLists.txt  deploy.sh  kobo.cmake  vscode-launch.sh
lib/: instructions.txt
lib/libevdev/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libevdev.pc  libtool
lib/libevdev-1.8.0/: Makefile  config.h  config.status  libevdev.pc  libtool
lib/libevdev-1.8.0/doc/: Makefile  libevdev.doxygen  libevdev.man
lib/libevdev-1.8.0/libevdev/: Makefile  event-names.h
lib/libevdev-1.8.0/libevdev/.deps/: libevdev-names.Plo  libevdev-uinput.Plo  libevdev.Plo
lib/libevdev-1.8.0/libevdev/.libs/: libevdev.so.2.3.0
lib/libevdev-1.8.0/test/: Makefile  test-compile-pedantic  test-link  test-static-link
lib/libevdev-1.8.0/test/.deps/: test_compile_pedantic-test-compile-pedantic.Po  test_link-test-link.Po  test_static_link-test-link.Po
lib/libevdev-1.8.0/test/.libs/: test-link
lib/libevdev-1.8.0/tools/: Makefile  libevdev-events  libevdev-tweak-device  mouse-dpi-tool  touchpad-edge-detector
lib/libevdev/doc/: Makefile  Makefile.in  libevdev.doxygen  libevdev.man
lib/libevdev/libevdev/: Makefile  config.h  event-names.h
lib/libevdev/test/: Makefile  Makefile.in  test-compile-pedantic  test-link  test-static-link
lib/libevdev/tools/: Makefile  Makefile.in  libevdev-events  libevdev-list-codes  libevdev-tweak-device  mouse-dpi-tool  touchpad-edge-detector
old-manager/szybet-implementation/: cinematic-brightness.sh  sleep_manager
old-manager/szybet-implementation/suspend_scripts/: after_sleep.sh  go_sleep.sh  manage_sleep.sh  prepare_sleep.sh  touch_issue_fix.sh
other/: openrc-service  usbnet
src/: AppsFreeze.cpp  AppsFreeze.h  Wifi.cpp  Wifi.h  afterSleep.cpp  afterSleep.h  cinematicBrightness.cpp  cinematicBrightness.h  configUpdate.cpp  configUpdate.h  devices.cpp  devices.h  fbinkFunctions.cpp  fbinkFunctions.h  functions.cpp  functions.h  goingSleep.cpp  goingSleep.h  idleSleep.cpp  idleSleep.h  main.cpp  main.h  monitorEvents.cpp  monitorEvents.h  pipeHandler.cpp  pipeHandler.h  prepareSleep.cpp  prepareSleep.h  usbnet.cpp  usbnet.h  watchdog.cpp  watchdog.h
src-old/: evtest.c  monitorEvents.cpp
src-old/bad thread implementation/: afterSleep.cpp  functions.cpp  goingSleep.cpp  prepareSleep.cpp  watchdog.cpp
src/libevdev/: Makefile  Makefile.in
src/libevdev/.deps/: libevdev-names.Plo  libevdev-uinput.Plo  libevdev.Plo
(+77 files in other folders)
